# syncFile

./: .gitignore  README.en.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: design.md  fix-tracker.md  optimization-roadmap.md  release.md  smoke-test.md
docs/superpowers/plans/: 2026-04-09-syncfile-phase1-mvp.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/discovery/: device_registry.rs  mdns_service.rs  mod.rs
src-tauri/src/security/: trust.rs
src-tauri/src/storage/: device_identity.rs  mod.rs  persistent.rs  sandbox.rs
src-tauri/src/transfer/: codec.rs  file_hash.rs  mod.rs  protocol.rs  secure_channel.rs  tcp.rs
src/main/: index.ts
src/main/discovery/: device-registry.test.ts  device-registry.ts  mdns-service.test.ts  mdns-service.ts
src/main/ipc/: handlers.test.ts  handlers.ts
src/main/logging/: runtime-log.ts
src/main/security/: trust.test.ts  trust.ts
src/main/storage/: device-identity.test.ts  device-identity.ts  pending-offer-recovery.test.ts  pending-offer-recovery.ts  pending-offers.test.ts  pending-offers.ts  recent-peers.test.ts  recent-peers.ts  sandbox-location.test.ts  sandbox-location.ts  sandbox.test.ts  sandbox.ts  settings.test.ts  (+5 more)
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: ipc-channels.ts  types.ts
(+31 files in other folders)
